<resources>
    <string name="app_name">QueueApp2.3</string>

    <string name="slogan">Vi vill inte stå i kö, vi vill bara dricka öl!</string>

    <string name="knappKlubb_text">Klubb</string>
    <string name="knappPub_text">Äta</string>
    <string name="adminLogin">Admin login</string>

    <string name="login">Logga in</string>
    <string name="inputUsername">Användarnamn</string>
    <string name="inputPassword">Lösenord</string>
    <string name="loginButton">Logga in!</string>
    <string name="forgottenPasswordButton">Glömt lösenord?</string>

    <string name="sendNewPassword">Fyll i din epost så skickas ett nytt lösenord via email</string>
    <string name="sendPasswordButton">Skicka nytt lösenord</string>

    <string name="createEventButton">Skapa nytt event</string>
    <string name="manageEventButton">Hantera mina events</string>
    <string name="createSubuserButton">Skapa ny subuser</string>
    <string name="manageSubusersButton">Hantera mina subusers</string>
    <string name="manageMyAccount">Mitt konto</string>
    <string name="logoutButton">Logga ut</string>

    <string name="createEvent">Skapa nytt event</string>
    <string name="inputEventName">Eventnamn</string>
    <string name="radioLunch">Lunch</string>
    <string name="radioPub">Pub</string>
    <string name="radioClub">Klubb</string>
    <string name="coverCharge">Inträde</string>
    <string name="inputStart">Börjar</string>
    <string name="inputEnd">Slutar</string>
    <string name="radioYes">Ja</string>
    <string name="radioNo">Nej</string>
    <string name="repeat">Upprepa?</string>
    <string name="inputEventInfo">Eventinfo</string>
    <string name="createNewEventButton">Spara nytt event!</string>

    <string name="updateEvent">Uppdatera event</string>
    <string name="updateEventButton">Uppdatera event!</string>

    <string name="createSubuser">Skapa ny subuser</string>
    <string name="inputNameSubuser">För- och efternamn</string>
    <string name="inputPosition">Position på nationen, ex. 1Q eller namn på pub/klubb</string>
    <string name="inputEmail">Email</string>
    <string name="inputUserPassword">Lösenord</string>
    <string name="createNewSubuserButton">Skapa ny subuser!</string>

    <string name="currentUsername">Ditt användarnamn</string>
    <string name="yourUsername">LOAD USERNAME</string>
    <string name="currentEmail">Din epost</string>
    <string name="yourEmail">LOAD EMAIL</string>
    <string name="currentGroups">Grupper du tillhör</string>
    <string name="yourGroups">LOAD GROUPS</string>
    <string name="changePassword">Byt lösenord</string>
    <string name="changePasswordField1">Nuvarande lösenord</string>
    <string name="changePasswordField2">Nytt lösenord</string>
    <string name="changePasswordField3">Upprepa nytt lösenord</string>
    <string name="newPasswordButton">Byt lösenord!</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hej</string>
    <string name="title_activity_klubb">Klubb</string>
    <string name="title_activity_pub">Pub</string>
</resources>
