<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:hint="@string/inputUsername" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputUsername"
        android:hint="@string/inputPassword"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/inputPassword"
        android:text="@string/loginButton" />

    <Button
        android:id="@+id/forgottenPasswordButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/forgottenPasswordButton" />
</RelativeLayout>
