<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView android:id="@+id/sendNewPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendNewPassword"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sendNewPassword"
        android:hint="@string/inputEmail" />

    <Button
        android:id="@+id/sendPasswordButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputEmail"
        android:text="@string/sendPasswordButton" />
</RelativeLayout>
