<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/knappKlubb_text"
        android:id="@+id/knappKlubb"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="103dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/knappPub_text"
        android:id="@+id/knappPub"
        android:layout_below="@+id/knappKlubb"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"/>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/adminLogin"
        android:id="@+id/adminButton"
        android:layout_alignParentBottom="true" />

</RelativeLayout>